kubernetes/apps/deluge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluge
  namespace: deluge
spec:
  type: ClusterIP
  selector:
    app: deluge
  ports:
    - name: web
      port: 8112
      targetPort: 8112
      protocol: TCP
    - name: daemon
      port: 58846
      targetPort: 58846
      protocol: TCP
    - name: torrent-tcp
      port: 6881
      targetPort: 6881
      protocol: TCP
    - name: torrent-udp
      port: 6881
      targetPort: 6881
      protocol: UDP
